deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operations-engineering-metadata-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: operations-engineering-metadata-poc
  template:
    metadata:
      labels:
        app: operations-engineering-metadata-poc
    spec:
      containers:
        - name: operations-engineering-metadata-poc
          image: json0/metadata-api:latest
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: operations-engineering-metadata-poc
  labels:
    app: operations-engineering-metadata-poc
spec:
  ports:
    - port: 5000
      name: https
      targetPort: 5000
  selector:
    app: operations-engineering-metadata-poc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operations-engineering-metadata-poc
  namespace: operations-engineering-metadata-poc
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: operations-engineering-metadata-poc-operations-engineering-metadata-poc-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
    - hosts:
        - operations-engineering-metadata-poc.cloud-platform.service.justice.gov.uk
  rules:
    - host: operations-engineering-metadata-poc.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - backend:
              service:
                name: operations-engineering-metadata-poc
                port:
                  number: 5000
            path: /
            pathType: ImplementationSpecific
